# VisualizeGit

./: .gitignore  CONTRIBUTING.md  ReadMe.md  app.py  basic2.py  basic3.py  basic4.py  development-read.txt  pyproject.toml  requirements.txt  runner.py  test_status_animation.py  ui.py
Animations/: asciiMagicTest.py  commit.py  fetch.py  gitMergeEg.py  gitStatus.py  status.py  termcolorTEst.py  testAnimations.py  testRich.py  tqdmTest.py
IntegratedTest/: gitStatus.py
IntegratedTest/status/: gitStatus.py  twice.py
commands/: commit.py  fetch.py  status.py
core/: git_utils.py  runner.py  ui.py  ui_config.py
instructions/: aim.md  project_overview.md  todo.md
test/: basic.py  basic3.py  basic4.py  vgit.py
vgit/: __main__.py  cli.py  test.py  ui.py
vgit/animations/: add.py  base.py  checkout.py  clone.py  commit.py  default.py  fetch.py  merge.py  pull.py  push.py  standards.md  status.py  unsupported_version.py  widgets.py
vgit/commands/: add.py  branch.py  checkout.py  clone.py  commit.py  fetch.py  merge.py  pull.py  push.py  status.py  switch.py
vgit/core/: git_model.py  git_utils.py  logger.py  runner.py  ui_config.py  ui_utils.py
