[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vgit"
version = "0.1.0"
description = "Educational Git Visualizer"
readme = "README.md"
requires-python = ">=3.8"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [
    { name="Orange-Tofu", email="akshays@duck.com" }
]

dependencies = [
    "gitdb==4.0.12",
    "GitPython==3.1.45",
    "rich==13.9.4",
    "smmap==5.0.2",
    "click==8.3.1",
]

[project.scripts]
vgit = "vgit.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
